<resources>
    <string name="app_name">ASETKU</string>
    <string name="asetku">ASETKU</string>
    <string name="recommendation">*These results are obtained from calculations using the previously selected method</string>
    <string name="stable_title">Stable Cash Flow</string>
    <string name="different_title">Different Cash Flow</string>
    <string name="initial_investment">Initial Investment</string>
    <string name="cash_flow">Cash Flow</string>
    <string name="year">Years</string>
    <string name="discount_rate">Discount Rate</string>
    <string name="cash_flow_1">Cash Flow 1</string>
    <string name="cash_flow_2">Cash Flow 2</string>
    <string name="cash_flow_3">Cash Flow 3</string>
    <string name="pp">Payback Period</string>
    <string name="npv">Net Present Value</string>
    <string name="pi">Profitability Index</string>
    <string name="irr">Internal Rate of Return</string>
    <string name="company">Company</string>
    <string name="company_1">Company 1</string>
    <string name="company_2">Company 2</string>
    <string name="company_3">Company 3</string>
    <string name="company_0_1">Company NPV 1</string>
    <string name="company_0_2">Company NPV 2</string>
    <string name="company_1_1">Company 1 NPV 1</string>
    <string name="company_1_2">Company 1 NPV 2</string>
    <string name="company_2_1">Company 2 NPV 1</string>
    <string name="company_2_2">Company 2 NPV 2</string>
    <string name="company_3_1">Company 3 NPV 1</string>
    <string name="company_3_2">Company 3 NPV 2</string>
    <string name="calculate">Calculate</string>
    <string name="back_to_home">Back to Home</string>
    <string name="template_value">Insert Value</string>
    <string name="the_best_investment">The best investment, goes to</string>
    <string name="calculating">Calculating...</string>
    <string name="source">Source : www.investopedia.com</string>
    <string name="pp_article">The term payback period (PP) refers to the amount of time it takes to recover the cost of an investment. Simply put, it is the length of time an investment reaches a breakeven point. People and corporations mainly invest their money to get paid back, which is why the payback period is so important. In essence, the shorter payback an investment has, the more attractive it becomes. Determining the payback period is useful for anyone and can be done by dividing the initial investment by the average cash flows.</string>
    <string name="npv_article">Net present value (NPV) is the difference between the present value of cash inflows and the present value of cash outflows over a period of time. NPV is used in capital budgeting and investment planning to analyze the profitability of a projected investment or project. NPV is the result of calculations used to find today’s value of a future stream of payments.</string>
    <string name="pi_article">The profitability index (PI), alternatively referred to as value investment ratio (VIR) or profit investment ratio (PIR), describes an index that represents the relationship between the costs and benefits of a proposed project. It is calculated as the ratio between the present value of future expected cash flows and the initial amount invested in the project. A higher PI means that a project will be considered more attractive.</string>
    <string name="irr_article">The internal rate of return (IRR) is a metric used in financial analysis to estimate the profitability of potential investments. IRR is a discount rate that makes the net present value (NPV) of all cash flows equal to zero in a discounted cash flow analysis.</string>
    <string name="back">Back</string>
    <string name="methods">PP, NPV, PI and IRR</string>
    <string name="back_to_method">Back to Method</string>
    <string name="description">Description</string>
</resources>