<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp">

    <TextView
        android:id="@+id/tvPerusahaan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/company_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPerusahaan1ValuePP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Payback Period = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan1" />

    <TextView
        android:id="@+id/tvPerusahaan1ValueNPV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Net Present Value = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan1ValuePP" />

    <TextView
        android:id="@+id/tvPerusahaan1ValuePI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Profitability Index = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan1ValueNPV" />

    <TextView
        android:id="@+id/tvPerusahaan1ValueIRR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Internal Rate of Return = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan1ValuePI" />

    <TextView
        android:id="@+id/tvPerusahaan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/company_2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan1ValueIRR" />

    <TextView
        android:id="@+id/tvPerusahaan2ValuePP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Payback Period = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan2" />

    <TextView
        android:id="@+id/tvPerusahaan2ValueNPV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Net Present Value = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan2ValuePP" />

    <TextView
        android:id="@+id/tvPerusahaan2ValuePI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Profitability Index = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan2ValueNPV" />

    <TextView
        android:id="@+id/tvPerusahaan2ValueIRR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Internal Rate of Return = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan2ValuePI" />

    <TextView
        android:id="@+id/tvPerusahaan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/company_3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan2ValueIRR" />

    <TextView
        android:id="@+id/tvPerusahaan3ValuePP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Payback Period = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan3" />

    <TextView
        android:id="@+id/tvPerusahaan3ValueNPV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Net Present Value = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan3ValuePP" />

    <TextView
        android:id="@+id/tvPerusahaan3ValuePI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Profitability Index = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan3ValueNPV" />

    <TextView
        android:id="@+id/tvPerusahaan3ValueIRR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="Internal Rate of Return = 2 Tahun"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerusahaan3ValuePI" />
</androidx.constraintlayout.widget.ConstraintLayout>